--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ hr {
 .intro__inner {
     width: 100%;
     max-width: 880px;
-    margin: 0 auto;
+    margin: 140px auto;
     text-align: center;
 }
 
